force-app/main/default/objects/Partner_Program_Settings__c/fields/Available_Program_Years__c.field-meta.xml
<CustomField>
    <fullName>Available_Program_Years__c</fullName>
    <description>A comma separated list of available partner program years, This populates a select list on the Dealer Boat Order tool in the Partner Community</description>
    <inlineHelpText>A comma separated list of available partner program years, This populates a select list on the Dealer Boat Order tool in the Partner Community</inlineHelpText>
    <label>Available Program Years</label>
    <length>255</length>
    <type>Text</type>
</CustomField>