force-app/main/default/objects/Partner_Program_Settings__c/fields/Coop_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Coop_Discount_Percent__c</fullName>
    <description>Discount percentage offered by the Partner Program - Coop</description>
    <label>Coop Discount Percent</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>