force-app/main/default/objects/Partner_Program_Settings__c/fields/Kickstart_Booking_Order_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Kickstart_Booking_Order_Discount_Percent__c</fullName>
    <description>The discount percentage offered by the Partner Program - Kickstart Booking Order Discount</description>
    <label>Kickstart Booking Order Discount Percent</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>